--- a/.gitignore
+++ b/.gitignore
@@ -127,9 +127,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
-
-mappings/*/output/*
+mappings/package_F03/output/000002-2019/000002-2019.ttl
 mappings/.gitignore
 .idea
 rmlmapper.jar
