Updating the resources list & adapting conceptual and technical mappings

--- a/mappings/package_F03/transformation/mappings.yarrrml.yml
+++ b/mappings/package_F03/transformation/mappings.yarrrml.yml
@@ -16,7 +16,7 @@
         referenceFormulation: jsonpath
         iterator: $.results.bindings[*]
       countries-source:
-        access: countries.json
+        access: country.json
         referenceFormulation: jsonpath
         iterator: $.results.bindings[*]
 
