--- a/docs/antora-playbook.yml
+++ b/docs/antora-playbook.yml
@@ -2,10 +2,10 @@ site:
   title: ted-sws-artefacts-docs
   start_page: ted-sws-artefacts::index.adoc
 content:
-  edit_url: false
+#  edit_url: false
   sources:
-    - url: https://github.com/meaningfy-ws/ted-sws-artefacts.git
-#    - url: /home/dude/work/ted-sws
+#    - url: https://github.com/meaningfy-ws/ted-sws-artefacts.git
+    - url: /home/lps/work/workspace-charm/ted-sws-artefacts
       branches:
       - main
       start_path: docs/antora
