--- a/docs/antora-playbook.yml
+++ b/docs/antora-playbook.yml
@@ -1,5 +1,5 @@
 site:
-  title: ted-sws-artefacts-docs
+  title: TED-SWS artefacts documentation
   start_page: ted-sws-artefacts::index.adoc
 content:
 #  edit_url: false
@@ -7,7 +7,8 @@ content:
 #    - url: https://github.com/meaningfy-ws/ted-sws-artefacts.git
     - url: /home/lps/work/workspace-charm/ted-sws-artefacts
       branches:
-      - main
+#        - main
+        - HEAD
       start_path: docs/antora
 ui:
   bundle:
