--- a/docs/antora/antora.yml
+++ b/docs/antora/antora.yml
@@ -1,6 +1,6 @@
 name: ted-sws-artefacts
+title: TED-SWS artefacts documentation
 version: master
-title: ted-sws-artefacts documentation
 start_page: ROOT:index.adoc
 nav:
   - modules/ROOT/nav.adoc
