--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,14 @@ on:
       - main
       - 'feature/**'
     paths:
-      - 'docs'
+      - 'docs/**'
+  pull_request:
+    types:
+    - closed
+    branches:
+    - master
+    paths:
+      - 'docs/**'    
 env:
   SITE_DIR: 'site'
 
