last touch on the documentation

--- a/docs/antora-playbook.yml
+++ b/docs/antora-playbook.yml
@@ -4,11 +4,11 @@ site:
 content:
 #  edit_url: false
   sources:
-#    - url: https://github.com/meaningfy-ws/ted-sws-artefacts.git
-    - url: /home/lps/work/workspace-charm/ted-sws-artefacts
+    - url: https://github.com/meaningfy-ws/ted-sws-artefacts.git
+#    - url: /home/lps/work/workspace-charm/ted-sws-artefacts
       branches:
-#        - main
-        - HEAD
+        - main
+#        - HEAD
       start_path: docs/antora
 ui:
   bundle:
