--- a/docs/antora/antora.yml
+++ b/docs/antora/antora.yml
@@ -1,5 +1,5 @@
 name: ted-sws-artefacts
-title: TED-SWS artefacts documentation
+title: TED RDF Mapping
 version: master
 start_page: ROOT:index.adoc
 nav:
