--- a/docs/antora/antora.yml
+++ b/docs/antora/antora.yml
@@ -1,5 +1,5 @@
-name: ted-sws-artefacts
-title: TED RDF Mapping
+name: rdf-mapping
+title: XML to RDF Mappings
 version: master
 start_page: ROOT:index.adoc
 nav:
