--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,5 +24,6 @@ jobs:
         python -m pip install --upgrade setuptools pip wheel
         TED_SWS_BRANCH=feature/TED-604 make install-custom
     - name: Run Tests
-      run: mapping_suite_validator package_F03
+      run: make test
+
 
