Fixed some broken links in the docs

--- a/docs/antora-playbook.yml
+++ b/docs/antora-playbook.yml
@@ -1,10 +1,10 @@
 site:
   title: TED-SWS artefacts documentation
-  start_page: ted-sws-artefacts::index.adoc
+  start_page: rdf-mapping::index.adoc
 content:
 #  edit_url: false
   sources:
-    - url: https://github.com/meaningfy-ws/ted-sws-artefacts.git
+    - url: https://github.com/OP-TED/ted-rdf-mapping.git
 #    - url: /home/lps/work/workspace-charm/ted-sws-artefacts
       branches:
         - main
