CM diff between release/tx1.3 and release/tx1.2.gamma

--- a/cm_diffs/conceptual_mappings_diff_F06.json
+++ b/cm_diffs/conceptual_mappings_diff_F06.json
@@ -1,205 +1,20 @@
 {
   "values_changed": {
-    "root['xpaths'][51]['form_field']": {
-      "new_value": "II.2.5.0 - Agree to publish",
-      "old_value": "II.2.5.0.1 - Agree to publish"
-    },
     "root['metadata']['mapping_version']": {
-      "new_value": "4.2.1",
-      "old_value": "3.4.1"
+      "new_value": "5.5.0",
+      "old_value": "5.1.0"
     },
-    "root['metadata']['epo_version']": {
-      "new_value": "3.1.0-dev",
-      "old_value": "3.0.0"
+    "root['rules'][126]['class_path'][0]": {
+      "new_value": "epo:Contract / xsd:date",
+      "old_value": "epo:Contract / rdf:langString"
     },
-    "root['metadata']['metadata_constraints']['min_xsd_version']": {
-      "new_value": "R2.0.9.S03.E01",
-      "old_value": "R2.0.9.S04.E01"
+    "root['rules'][125]['property_path'][0]": {
+      "new_value": "?this epo:comprisesTenderAwardOutcome / epo:indicatesAwardOfLotToWinner ?value",
+      "old_value": "?this epo:comprisesTenderAwardOutcome / epo:awardsLotToWinner ?value"
     },
-    "root['rules'][108]['standard_form_field_id']": {
-      "new_value": "I.6.1",
-      "old_value": "IV.2.1.0.2"
-    },
-    "root['rules'][108]['standard_form_field_name']": {
-      "new_value": "Main activity",
-      "old_value": "Previous publication concerning this procedure"
-    },
-    "root['rules'][141]['standard_form_field_id']": {
-      "new_value": "II.2.5.0",
-      "old_value": "V.2.3.0.0"
-    },
-    "root['rules'][69]['standard_form_field_id']": {
-      "new_value": "II.2.5.0",
-      "old_value": "II.2.5.0.1"
-    },
-    "root['rules'][107]['standard_form_field_id']": {
-      "new_value": "IV.2.0",
-      "old_value": "IV.2.1.0.1"
-    },
-    "root['rules'][107]['standard_form_field_name']": {
-      "new_value": "Administrative information",
-      "old_value": "Previous publication concerning this procedure"
-    },
-    "root['rules'][106]['eform_bt_id']": {
-      "new_value": "",
-      "old_value": "BT-125"
-    },
-    "root['rules'][106]['eform_bt_name']": {
-      "new_value": "",
-      "old_value": "Previous Planning Identifier"
-    },
-    "root['rules'][130]['standard_form_field_name']": {
-      "new_value": "Agree to publish",
-      "old_value": "Information about tenders"
-    },
-    "root['rules'][183]['standard_form_field_id']": {
-      "new_value": "V.2.3.0",
-      "old_value": "V.2.8.2.1"
-    },
-    "root['rules'][183]['standard_form_field_name']": {
-      "new_value": "Agree to publish",
-      "old_value": "Country"
-    },
-    "root['rules'][160]['property_path'][0]": {
-      "new_value": "?this epo:hasAwardedValue / epo:hasAmountValue ?value .",
-      "old_value": "?this epo:hasFinancialOfferValue / epo:hasAmountValue ?value ."
-    },
-    "root['rules'][108]['property_path'][0]": {
-      "new_value": "?this epo:hasMainActivityDescription ?value .",
-      "old_value": "?this epo:concernsPreviousNotice ?value"
-    },
-    "root['rules'][160]['class_path'][0]": {
-      "new_value": "epo:LotAwardOutcome / epo:MonetaryValue / xsd:decimal",
-      "old_value": "epo:Tender / epo:MonetaryValue / xsd:decimal"
-    },
-    "root['rules'][161]['class_path'][0]": {
-      "new_value": "epo:LotAwardOutcome / epo:MonetaryValue / at-voc:currency (from currency.json)",
-      "old_value": "epo:Tender / epo:MonetaryValue / at-voc:currency (from currency.json)"
-    },
-    "root['rules'][161]['property_path'][0]": {
-      "new_value": "?this epo:hasAwardedValue / epo:hasCurrency ?value .",
-      "old_value": "?this epo:hasFinancialOfferValue / epo:hasCurrency ?value ."
-    },
-    "root['rules'][108]['class_path'][0]": {
-      "new_value": "org:Organization / rdf:langString",
-      "old_value": "epo:ProcurementProcessInformation / epo:Notice"
-    },
-    "root['rules'][122]['property_path'][0]": {
-      "new_value": "?this epo:hasNonAwardJustification <http://publications.europa.eu/resource/authority/non-award-justification/none-rej> .",
-      "old_value": "?this epo:hasNonAwardJustification <http://publications.europa.eu/resource/authority/non-award-justification/all-rej> ."
-    },
-    "root['rules'][174]['property_path'][0]": {
-      "new_value": "?this epo:hasBargainPrice / epo:hasAmountValue ?value .",
-      "old_value": "?this epo:hasAwardedValue / epo:hasAmountValue ?value ."
-    },
-    "root['rules'][175]['property_path'][0]": {
-      "new_value": "?this epo:hasBargainPrice / epo:hasCurrency ?value .",
-      "old_value": "?this epo:hasAwardedValue / epo:hasCurrency ?value ."
-    }
-  },
-  "iterable_item_added": {
-    "root['xpaths'][33]": {
-      "xpath": "/TED_EXPORT/FORM_SECTION/F06_2014/CONTRACTING_BODY/CE_ACTIVITY_OTHER",
-      "form_field": "I.6.1 - Main activity"
-    },
-    "root['rules'][107]['field_xpath'][0]": "if(exists(TERMINATION_DPS) or exists(TERMINATION_PIN))",
-    "root['rules'][177]": {
-      "standard_form_field_id": "V.2.7.0",
-      "standard_form_field_name": "Agree to publish",
-      "eform_bt_id": "",
-      "eform_bt_name": "",
-      "field_xpath": [],
-      "field_xpath_condition": null,
-      "class_path": [],
-      "property_path": [],
-      "triple_fingerprint": null,
-      "fragment_fingerprint": null
-    },
-    "root['rules'][183]": {
-      "standard_form_field_id": "V.2.8.2.1.0",
-      "standard_form_field_name": "Agree to publish",
-      "eform_bt_id": "",
-      "eform_bt_name": "",
-      "field_xpath": [],
-      "field_xpath_condition": null,
-      "class_path": [],
-      "property_path": [],
-      "triple_fingerprint": null,
-      "fragment_fingerprint": null
-    }
-  },
-  "iterable_item_removed": {
-    "root['rules'][49]": {
-      "standard_form_field_id": "II.1.7",
-      "standard_form_field_name": "Total value of the procurement (Excluding VAT)",
-      "eform_bt_id": "",
-      "eform_bt_name": "",
-      "field_xpath": [],
-      "field_xpath_condition": null,
-      "class_path": [],
-      "property_path": [],
-      "triple_fingerprint": null,
-      "fragment_fingerprint": null
-    },
-    "root['rules'][67]": {
-      "standard_form_field_id": "II.2.5.0",
-      "standard_form_field_name": "Award criteria",
-      "eform_bt_id": "",
-      "eform_bt_name": "",
-      "field_xpath": [],
-      "field_xpath_condition": null,
-      "class_path": [],
-      "property_path": [],
-      "triple_fingerprint": null,
-      "fragment_fingerprint": null
-    },
-    "root['rules'][68]": {
-      "standard_form_field_id": "II.2.5.0.1",
-      "standard_form_field_name": "Agree to publish",
-      "eform_bt_id": "",
-      "eform_bt_name": "",
-      "field_xpath": [],
-      "field_xpath_condition": null,
-      "class_path": [],
-      "property_path": [],
-      "triple_fingerprint": null,
-      "fragment_fingerprint": null
-    },
-    "root['rules'][131]": {
-      "standard_form_field_id": "V.2.2.1.0",
-      "standard_form_field_name": "Agree to publish",
-      "eform_bt_id": "",
-      "eform_bt_name": "",
-      "field_xpath": [],
-      "field_xpath_condition": null,
-      "class_path": [],
-      "property_path": [],
-      "triple_fingerprint": null,
-      "fragment_fingerprint": null
-    },
-    "root['rules'][140]": {
-      "standard_form_field_id": "V.2.3.0.0",
-      "standard_form_field_name": "Name and address of the contractor",
-      "eform_bt_id": "",
-      "eform_bt_name": "",
-      "field_xpath": [],
-      "field_xpath_condition": null,
-      "class_path": [],
-      "property_path": [],
-      "triple_fingerprint": null,
-      "fragment_fingerprint": null
-    },
-    "root['rules'][156]": {
-      "standard_form_field_id": "V.2.4.0",
-      "standard_form_field_name": "Information on value of the contract/lot (excluding VAT)",
-      "eform_bt_id": "",
-      "eform_bt_name": "",
-      "field_xpath": [],
-      "field_xpath_condition": null,
-      "class_path": [],
-      "property_path": [],
-      "triple_fingerprint": null,
-      "fragment_fingerprint": null
+    "root['rules'][215]['class_path'][0]": {
+      "new_value": "epo:Notice / xsd:date",
+      "old_value": "epo:Notice"
     }
   }
 }
