Recreated Conceptual Mapping Diffs with nicer headers

--- a/cm_diffs/conceptual_mappings_diff_F06.json
+++ b/cm_diffs/conceptual_mappings_diff_F06.json
@@ -4,9 +4,9 @@
       "new_value": "5.5.0",
       "old_value": "5.1.0"
     },
-    "root['rules'][126]['class_path'][0]": {
-      "new_value": "epo:Contract / xsd:date",
-      "old_value": "epo:Contract / rdf:langString"
+    "root['metadata']['epo_version']": {
+      "new_value": "3.1.0",
+      "old_value": "3.1.0-dev"
     },
     "root['rules'][125]['property_path'][0]": {
       "new_value": "?this epo:comprisesTenderAwardOutcome / epo:indicatesAwardOfLotToWinner ?value",
@@ -15,6 +15,10 @@
     "root['rules'][215]['class_path'][0]": {
       "new_value": "epo:Notice / xsd:date",
       "old_value": "epo:Notice"
+    },
+    "root['rules'][126]['class_path'][0]": {
+      "new_value": "epo:Contract / xsd:date",
+      "old_value": "epo:Contract / rdf:langString"
     }
   }
 }
