--- a/cm_diffs/conceptual_mappings_diff_F22.json
+++ b/cm_diffs/conceptual_mappings_diff_F22.json
@@ -4,6 +4,14 @@
       "new_value": "5.5.0",
       "old_value": "5.1.0"
     },
+    "root['metadata']['epo_version']": {
+      "new_value": "3.1.0",
+      "old_value": "3.1.0-dev"
+    },
+    "root['rules'][274]['class_path'][0]": {
+      "new_value": "epo:Notice / xsd:date",
+      "old_value": "epo:Notice"
+    },
     "root['rules'][195]['class_path'][0]": {
       "new_value": "epo:Contract / xsd:date",
       "old_value": "epo:Contract / rdf:langString"
@@ -11,10 +19,6 @@
     "root['rules'][194]['property_path'][0]": {
       "new_value": "?this epo:comprisesTenderAwardOutcome / epo:indicatesAwardOfLotToWinner ?value",
       "old_value": "?this epo:comprisesTenderAwardOutcome / epo:awardsLotToWinner ?value"
-    },
-    "root['rules'][274]['class_path'][0]": {
-      "new_value": "epo:Notice / xsd:date",
-      "old_value": "epo:Notice"
     }
   },
   "iterable_item_added": {
