--- a/cm_diffs/conceptual_mappings_diff_F25.json
+++ b/cm_diffs/conceptual_mappings_diff_F25.json
@@ -4,17 +4,21 @@
       "new_value": "5.5.0",
       "old_value": "5.1.0"
     },
-    "root['rules'][87]['property_path'][0]": {
-      "new_value": "?this epo:comprisesTenderAwardOutcome / epo:indicatesAwardOfLotToWinner ?value",
-      "old_value": "?this epo:comprisesTenderAwardOutcome / epo:awardsLotToWinner ?value"
+    "root['metadata']['epo_version']": {
+      "new_value": "3.1.0",
+      "old_value": "3.1.0-dev"
+    },
+    "root['rules'][88]['class_path'][0]": {
+      "new_value": "epo:LotAwardOutcome / xsd:date",
+      "old_value": "epo:LotAwardOutcome / rdf:langString"
     },
     "root['rules'][154]['class_path'][0]": {
       "new_value": "epo:Notice / xsd:date",
       "old_value": "epo:Notice"
     },
-    "root['rules'][88]['class_path'][0]": {
-      "new_value": "epo:LotAwardOutcome / xsd:date",
-      "old_value": "epo:LotAwardOutcome / rdf:langString"
+    "root['rules'][87]['property_path'][0]": {
+      "new_value": "?this epo:comprisesTenderAwardOutcome / epo:indicatesAwardOfLotToWinner ?value",
+      "old_value": "?this epo:comprisesTenderAwardOutcome / epo:awardsLotToWinner ?value"
     }
   },
   "iterable_item_added": {
