--- a/cm_diffs/conceptual_mappings_diff_F21.json
+++ b/cm_diffs/conceptual_mappings_diff_F21.json
@@ -4,25 +4,29 @@
       "new_value": "5.5.0",
       "old_value": "5.1.0"
     },
-    "root['rules'][134]['class_path'][0]": {
-      "new_value": "epo:Notice / epo:PlannedProcurementPart / epo:ProcessPlanningTerm / xsd:date",
-      "old_value": "epo:Notice / xsd:date"
+    "root['metadata']['epo_version']": {
+      "new_value": "3.1.0",
+      "old_value": "3.1.0-dev"
     },
     "root['rules'][187]['property_path'][0]": {
       "new_value": "?this epo:comprisesTenderAwardOutcome / epo:indicatesAwardOfLotToWinner ?value",
       "old_value": "?this epo:comprisesTenderAwardOutcome / epo:awardsLotToWinner ?value"
     },
-    "root['rules'][188]['class_path'][0]": {
-      "new_value": "epo:Contract / xsd:date",
-      "old_value": "epo:Contract / rdf:langString"
+    "root['rules'][264]['class_path'][0]": {
+      "new_value": "epo:Notice / xsd:date",
+      "old_value": "epo:Notice"
     },
     "root['rules'][134]['property_path'][0]": {
       "new_value": "?this  epo-not:announcesPlannedProcurementPart / epo:isSubjectToTerm / epo:hasEstimatedContractNoticePublicationDate ?value",
       "old_value": "?this epo:hasPublicationDate ?value"
     },
-    "root['rules'][264]['class_path'][0]": {
-      "new_value": "epo:Notice / xsd:date",
-      "old_value": "epo:Notice"
+    "root['rules'][188]['class_path'][0]": {
+      "new_value": "epo:Contract / xsd:date",
+      "old_value": "epo:Contract / rdf:langString"
+    },
+    "root['rules'][134]['class_path'][0]": {
+      "new_value": "epo:Notice / epo:PlannedProcurementPart / epo:ProcessPlanningTerm / xsd:date",
+      "old_value": "epo:Notice / xsd:date"
     }
   },
   "iterable_item_added": {
