--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,2 @@
 # Project dependecies
-git+https://github.com/OP-TED/ted-rdf-conversion-pipeline@main#egg=ted-sws
-
-
+mapping-workbench @ git+https://github.com/meaningfy-ws/mapping-workbench.git
