--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade setuptools pip wheel
-        TED_SWS_BRANCH=main make install-custom
+        make install
     - name: Run Tests
       run: make test
 
