--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,7 @@ name: Tests
 
 on:
   push:
-    branches: [ feature/* , main ]
+    branches: [ feature/* , main , release/* ]
   pull_request:
     branches: [ main ]
 
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade setuptools pip wheel
-        make install
+        make install-dev
     - name: Run Tests
       run: make test
 
