--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,7 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
+        sudo apt-get install -y libssl-dev libcurl4-openssl-dev
         python -m pip install --upgrade setuptools pip wheel
         make install
     - name: Run Tests
