--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 # Project dependecies
-mapping-workbench @ git+https://github.com/meaningfy-ws/mapping-workbench.git
+mapping-toolchain @ git+https://github.com/meaningfy-ws/mapping-toolchain.git
